[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-engine-dummy"
version = "0.9.0"
description = "Tool to manage development environments for web applications using containers - Dummy Implementation"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "riptide-lib >= 0.9, < 0.10"
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-engine-dummy"
Documentation = "https://riptide-docs.readthedocs.io"

[project.entry-points."riptide.engine"]
dummy = "riptide_engine_dummy.engine:DummyEngine"
